# interview-pairing-session

./: .gitignore  README.md
conway-game-of-life/: README.md  pyproject.toml
conway-game-of-life/src/: game_of_life.py  main.py
conway-game-of-life/test/: test_game_of_life.py
vending-machine/: README.md  pyproject.toml
vending-machine/src/: vending_machine.py
vending-machine/test/: test_product_inventory.py
