[tool.poetry]
name = "conway-game-of-life"
version = "0.1.0"
description = "An implementation of Conway's Game of Life"
authors = ["holtkampjs <holtkampjs@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
